# s1_apps_tecs_web

./: Dockerfile  README.md  main.py  pyproject.toml  test_main.py
.github/workflows/: docker.yml  main.yml
api/: test_main.py
